--- a/witherable.cabal
+++ b/witherable.cabal
@@ -31,5 +31,5 @@ library
                        unordered-containers,
                        vector
   hs-source-dirs:      src
-  ghc-options:         -Wall -Wcompat
+  ghc-options:         -Wall
   default-language:    Haskell2010
